--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,13 @@
+html {
+    width: 100%;
+    height: 100%;
+}
 body {
-    background-color: darkslategrey;
+    background: url("../images/background.jpg");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+}
+
+.container {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
