--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,3 +11,37 @@ body {
 .container {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+
+#question1 {
+    display: block;
+}
+#question2 {
+    display: none;
+}
+#question3 {
+    display: none;
+}
+#question4 {
+    display: none;
+}
+#question5 {
+    display: none;
+}
+#question6 {
+    display: none;
+}
+#question7 {
+    display: none;
+}
+#question8 {
+    display: none;
+}
+#question9 {
+    display: none;
+}
+#question10 {
+    display: none;
+}
+#timer {
+    display: none;
+}
