functioning game, needs results screen, unanswered variable, and reset function

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,3 +45,12 @@ body {
 #timer {
     display: none;
 }
+#correctLoading {
+    display: none;
+}
+#wrongLoading {
+    display: none;
+}
+#question11 {
+    display: none;
+}
